src/test/ui/issues/20000-29999/issue-20714.stderr
error[E0618]: expected function, found `G`
  --> $DIR/issue-20714.rs:4:13
   |
LL | struct G;
   | --------- `G` defined here
...
LL |     let g = G();
   |             ^--
   |             |
   |             call expression requires function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0618`.
